--- a/src/style/__about-us.scss
+++ b/src/style/__about-us.scss
@@ -43,7 +43,7 @@ content {
       width: 100%;
       flex-wrap: wrap;
       flex-direction: column;
-      margin-top: 30px;
+      // margin-top: 30px;
     }
 
     .about-us__text {
