--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -1,21 +1,242 @@
 .header {
-  display: flex;
-  flex-direction: row;
-  //justify-content: space-between;
-  // justify-content: center;
-  align-items: center;
+  // display: flex;
+  // //flex-direction: row;
+  // //justify-content: space-between;
+  // // justify-content: center;
+  // //align-items: center;
+  // width: 100%;
+  // height: 80px;
+  // padding: 16px 80px;
+  // border: none;
+  // max-width: 1440px;
+  // //display: none;
+  // width: 100vw;
+  // margin: 0 auto;
+  // padding: 0;
 
+  // flex-direction: row-reverse;
+
+  position: fixed;
   width: 100%;
-  height: 80px;
-  padding: 16px 80px;
-  border: none;
+  top: 0;
+  left: 0;
+  z-index: 50;
 
-  max-width: 1440px;
-  display: none;
+  .container {
+    max-width: 1050px;
+    width: 90%;
+    margin: auto;
+  }
 
-  width: 100vw;
-  margin: 0 auto;
-  padding: 0;
+  .navbar {
+    display: none;
+    width: 100%;
+    box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
+    background-color: $white;
+    @media (max-width: 915px) {
+      display: block;
+    }
+  }
+
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+  }
+
+  .navbar .menu-items {
+    display: flex;
+    width: 90vw;
+    margin: 0;
+    padding-top: 100px;
+    padding-left: 0px;
+  }
+
+  .navbar .nav-container li {
+    list-style: none;
+    background-color: aliceblue;
+  }
+
+  .navbar .nav-container a {
+    text-decoration: none;
+    color: #0e2431;
+    font-weight: 500;
+    font-size: 1.2rem;
+    padding: 0.7rem;
+  }
+
+  .navbar .nav-container a:hover {
+    // font-weight: bolder;
+  }
+
+  .nav-container {
+    display: block;
+    position: relative;
+    height: 80px;
+    width: 100vw;
+  }
+
+  .nav-container .checkbox {
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 32px;
+    top: 25px;
+    right: 5vw;
+    z-index: 5;
+    opacity: 0;
+    cursor: pointer;
+
+    position: absolute;
+    //right: 0;
+    /* top: 100px; */
+    //left: auto;
+  }
+
+  .nav-container .hamburger-lines {
+    display: block;
+    height: 26px;
+    width: 32px;
+    position: absolute;
+    top: 25px;
+    right: 5vw;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    position: absolute;
+    // right: 0;
+
+    /* top: 100px; */
+    // left: auto;
+  }
+
+  .nav-container .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: #0e2431;
+  }
+
+  .nav-container .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
+
+  .nav-container .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .nav-container .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+
+  .navbar .menu-items {
+    margin: 0 auto;
+    padding-top: 120px;
+    // box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
+    // box-shadow: inset 0vw 60vw 100vw rgb(178 133 28 / 50%);
+    // box-shadow: inset 0vw 60vw 100vw $white;
+
+    height: 100vh;
+    width: 100%;
+    transform: translate(-150%);
+    display: flex;
+    flex-direction: column;
+    // margin-left: -40px;
+    //  padding-left: 50px;
+    transition: transform 0.5s ease-in-out;
+    text-align: center;
+    justify-content: start;
+    width: 100vw;
+    // background-color: antiquewhite;
+    background-color: $white;
+    img {
+      margin-top: 15vw;
+    }
+  }
+
+  .navbar .menu-items li {
+    // margin-bottom: 1.2rem;
+    // font-size: 1.5rem;
+    // font-weight: 500;
+    height: 10vh;
+    // border: black 1px solid;
+    // background-color: antiquewhite;
+    font-size: 16px;
+    font-weight: 600;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    align-self: center;
+    margin-bottom: 1%;
+    background-color: $white;
+    &:hover {
+      border-bottom: solid 3px $orange;
+      //margin-bottom: -3px;
+    }
+  }
+
+  .logo {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    font-size: 1.2rem;
+    color: #0e2431;
+
+    left: 0;
+    top: 0;
+
+    // height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    // height: 80px;
+    // justify-content: left;
+    // width: 50vw;
+    // margin: 0;
+
+    height: 60px;
+    justify-content: left;
+    width: 50vw;
+    top: 8px;
+    transition: all 0.2s ease-in-out;
+    img {
+      // width: 19vw;
+      width: 150px;
+      height: auto;
+      margin: 0;
+      margin-left: 5vw;
+    }
+  }
+
+  .nav-container input[type="checkbox"]:checked ~ .menu-items {
+    transform: translateX(0);
+  }
+
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+    transform: rotate(45deg);
+  }
+
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+    transform: scaleY(0);
+  }
+
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+    transform: rotate(-45deg);
+  }
+
+  .nav-container input[type="checkbox"]:checked ~ .logo {
+    display: none;
+  }
+
   @media (max-width: 1439px) {
     width: 100vw;
     margin: 0 auto;
@@ -28,10 +249,11 @@
     align-items: center;
     font-size: 16px;
     font-weight: 600;
-    //  padding: 12px 10px;
+
     padding: 10px 80px;
     width: 100%;
     justify-content: center;
+    background-color: $white;
     @media (max-width: 1439px) {
       padding: 10px 80px;
       width: 100%;
@@ -39,6 +261,9 @@
     }
     @media (max-width: 1280px) {
       padding: 10px 10px;
+    }
+    @media (max-width: 915px) {
+      display: none;
     }
     div {
       display: flex;
