--- a/src/style/__services.scss
+++ b/src/style/__services.scss
@@ -141,7 +141,8 @@
           line-height: 12px;
           margin-bottom: 22px;
           font-size: 14px;
-          margin-top: 30px;
+          // margin-top: 30px;
+          margin-top: auto;
         }
         // @media (max-width: 380px) {
         //   font-size: 10px;
