--- a/src/style/__welcome-screen.scss
+++ b/src/style/__welcome-screen.scss
@@ -6,6 +6,7 @@
   background: linear-gradient(103.2deg, #14213d 0%, #28427b 111.47%);
   border: none;
   //display: none;
+  margin-top: 200px;
   @media (max-width: 1439px) {
     //width: 100%;
     width: 100vw;
