--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,17 +1,173 @@
 @import "normalize.css";
 .header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 50;
+}
+.header .container {
+  max-width: 1050px;
+  width: 90%;
+  margin: auto;
+}
+.header .navbar {
+  display: none;
+  width: 100%;
+  box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
+  background-color: #ffffff;
+}
+@media (max-width: 915px) {
+  .header .navbar {
+    display: block;
+  }
+}
+.header .nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 62px;
+}
+.header .navbar .menu-items {
+  display: flex;
+  width: 90vw;
+  margin: 0;
+  padding-top: 100px;
+  padding-left: 0px;
+}
+.header .navbar .nav-container li {
+  list-style: none;
+  background-color: aliceblue;
+}
+.header .navbar .nav-container a {
+  text-decoration: none;
+  color: #0e2431;
+  font-weight: 500;
+  font-size: 1.2rem;
+  padding: 0.7rem;
+}
+.header .nav-container {
+  display: block;
+  position: relative;
+  height: 80px;
+  width: 100vw;
+}
+.header .nav-container .checkbox {
+  position: absolute;
+  display: block;
+  height: 32px;
+  width: 32px;
+  top: 25px;
+  right: 5vw;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+  position: absolute;
+  /* top: 100px; */
+}
+.header .nav-container .hamburger-lines {
+  display: block;
+  height: 26px;
+  width: 32px;
+  position: absolute;
+  top: 25px;
+  right: 5vw;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  /* top: 100px; */
+}
+.header .nav-container .hamburger-lines .line {
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 10px;
+  background: #0e2431;
+}
+.header .nav-container .hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+.header .nav-container .hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+.header .nav-container .hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+.header .navbar .menu-items {
+  margin: 0 auto;
+  padding-top: 120px;
+  height: 100vh;
+  width: 100%;
+  transform: translate(-150%);
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.5s ease-in-out;
+  text-align: center;
+  justify-content: start;
+  width: 100vw;
+  background-color: #ffffff;
+}
+.header .navbar .menu-items img {
+  margin-top: 15vw;
+}
+.header .navbar .menu-items li {
+  height: 10vh;
+  font-size: 16px;
+  font-weight: 600;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 80px;
-  padding: 16px 80px;
-  border: none;
-  max-width: 1440px;
+  width: -moz-fit-content;
+  width: fit-content;
+  align-self: center;
+  margin-bottom: 1%;
+  background-color: #ffffff;
+}
+.header .navbar .menu-items li:hover {
+  border-bottom: solid 3px #fca311;
+}
+.header .logo {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  font-size: 1.2rem;
+  color: #0e2431;
+  left: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 60px;
+  justify-content: left;
+  width: 50vw;
+  top: 8px;
+  transition: all 0.2s ease-in-out;
+}
+.header .logo img {
+  width: 150px;
+  height: auto;
+  margin: 0;
+  margin-left: 5vw;
+}
+.header .nav-container input[type=checkbox]:checked ~ .menu-items {
+  transform: translateX(0);
+}
+.header .nav-container input[type=checkbox]:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+.header .nav-container input[type=checkbox]:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+.header .nav-container input[type=checkbox]:checked ~ .hamburger-lines .line3 {
+  transform: rotate(-45deg);
+}
+.header .nav-container input[type=checkbox]:checked ~ .logo {
   display: none;
-  width: 100vw;
-  margin: 0 auto;
-  padding: 0;
 }
 @media (max-width: 1439px) {
   .header {
@@ -29,6 +185,7 @@
   padding: 10px 80px;
   width: 100%;
   justify-content: center;
+  background-color: #ffffff;
 }
 @media (max-width: 1439px) {
   .header .header__wrapper {
@@ -40,6 +197,11 @@
 @media (max-width: 1280px) {
   .header .header__wrapper {
     padding: 10px 10px;
+  }
+}
+@media (max-width: 915px) {
+  .header .header__wrapper {
+    display: none;
   }
 }
 .header .header__wrapper div {
@@ -96,6 +258,7 @@
   height: 700px;
   background: linear-gradient(103.2deg, #14213d 0%, #28427b 111.47%);
   border: none;
+  margin-top: 200px;
 }
 @media (max-width: 1439px) {
   .welcome-screen {
@@ -305,7 +468,6 @@ content .about-us__header {
     width: 100%;
     flex-wrap: wrap;
     flex-direction: column;
-    margin-top: 30px;
   }
 }
 content .about-us__header .about-us__text {
@@ -899,7 +1061,7 @@ content .about-us__partners img {
     line-height: 12px;
     margin-bottom: 22px;
     font-size: 14px;
-    margin-top: 30px;
+    margin-top: auto;
   }
 }
 @media (max-width: 630px) {
@@ -1770,4 +1932,7 @@ html {
   flex-direction: column;
   align-items: center;
   font-family: "Nunito Sans", sans-serif;
+}
+#app main {
+  margin-top: 80px;
 }/*# sourceMappingURL=style.css.map */
