--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -24,6 +24,9 @@ html {
   flex-direction: column;
   align-items: center;
   font-family: "Nunito Sans", sans-serif;
+  main {
+    margin-top: 80px;
+  }
 }
 
 // :root {
