--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -168,16 +168,16 @@
     }
     .step-2 {
       @media (max-width: 1439px) {
-        display: none !important;
+        //  display: none !important;
       }
     }
     .step-3 {
       @media (max-width: 1439px) {
-        display: none !important;
+        //  display: none !important;
       }
     }
     .step-4 {
-      display: none !important;
+      //  display: none !important;
       margin-right: 50px;
     }
   }
