--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -33,7 +33,7 @@
     width: 100%;
     box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
     background-color: $white;
-    @media (max-width: 915px) {
+    @media (max-width: 1020px) {
       display: block;
     }
   }
@@ -251,18 +251,20 @@
     font-weight: 600;
 
     padding: 10px 80px;
-    width: 100%;
+    // width: 100%;
+    width: 90vw;
+    height: 80px;
     justify-content: center;
     background-color: $white;
     @media (max-width: 1439px) {
       padding: 10px 80px;
-      width: 100%;
+      // width: 100%;
       justify-content: center;
     }
     @media (max-width: 1280px) {
-      padding: 10px 10px;
+      //  padding: 10px 10px;
     }
-    @media (max-width: 915px) {
+    @media (max-width: 1020px) {
       display: none;
     }
     div {
