--- a/src/style/__about-us.scss
+++ b/src/style/__about-us.scss
@@ -36,14 +36,17 @@ content {
       width: 100%;
       // margin-top: 96px;
     }
-    @media (max-width: 600px) {
-      height: fit-content;
-    }
     @media (max-width: 1100px) {
       width: 100%;
       flex-wrap: wrap;
       flex-direction: column;
       // margin-top: 30px;
+    }
+    @media (max-width: 600px) {
+      height: fit-content;
+    }
+    @media (max-width: 450px) {
+      margin-top: 32px;
     }
 
     .about-us__text {
@@ -122,8 +125,11 @@ content {
       justify-content: end;
       width: 412px;
       height: 240px;
-      @media (max-width: 420px) {
-        height: 50vw;
+      // @media (max-width: 420px) {
+      //   height: 50vw;
+      // }
+      @media (max-width: 450px) {
+        height: fit-content;
       }
     }
     .about-us__stat {
@@ -131,6 +137,9 @@ content {
       flex-direction: column;
       justify-content: start;
       width: 100%;
+      @media (max-width: 450px) {
+        height: fit-content;
+      }
 
       h2 {
         margin: 32px 16px 12px 32px;
@@ -150,6 +159,9 @@ content {
       img {
         width: auto;
         height: auto;
+        @media (max-width: 450px) {
+          width: 25%;
+        }
       }
     }
     .about-us__first-box {
@@ -216,11 +228,7 @@ content {
       height: fit-content;
       margin-bottom: 20px;
     }
-    @media (max-width: 635px) {
-      // justify-content: flex-end;
-    }
     div {
-      margin: 0 26px;
       width: fit-content;
       @media (max-width: 635px) {
         margin: 0;
@@ -228,10 +236,7 @@ content {
     }
     img {
       filter: grayscale(100%) contrast(0%) brightness(100%);
-      // filter: contrast(0%);
-      // filter: brightness(5%);
       @media (max-width: 800px) {
-        // width: 20vw;
         width: 50%;
       }
     }
