--- a/src/style/__services.scss
+++ b/src/style/__services.scss
@@ -17,6 +17,9 @@
   @media (max-width: 1280px) {
     width: 90vw;
   }
+  @media (max-width: 450px) {
+    margin-top: 60px;
+  }
 
   h2 {
     margin: 0;
@@ -48,13 +51,17 @@
   @media (max-width: 650px) {
     height: 45vw;
   }
-  @media (max-width: 450px) {
-    height: 40vw;
-  }
-  @media (max-width: 420px) {
-    border: $gray-light 2px solid;
+  // @media (max-width: 450px) {
+  //   height: 40vw;
+  // }
 
-    height: 50vw;
+  @media (max-width: 550px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    //border: black 1px solid;
+    height: fit-content;
+    border: $gray-light 2px solid;
   }
 
   .services__description {
@@ -68,17 +75,12 @@
       margin-left: 10px;
       z-index: 2;
     }
-    @media (max-width: 450px) {
-      height: 100%;
-    }
-    @media (max-width: 420px) {
-      height: 90%;
-      margin: 10px;
-      justify-content: center;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+    // @media (max-width: 450px) {
+    //   height: 100%;
+    // }
+    @media (max-width: 550px) {
+      width: 90vw;
+      margin: 0;
     }
 
     .services__wrapper {
@@ -87,11 +89,12 @@
       @media (max-width: 630px) {
         width: 100%;
       }
-      @media (max-width: 450px) {
-        margin-top: 10px;
-      }
-      @media (max-width: 420px) {
-        margin-top: 20px;
+      // @media (max-width: 450px) {
+      //   margin-top: 10px;
+      // }
+      @media (max-width: 550px) {
+        height: fit-content;
+        margin-top: 0;
       }
       h2 {
         margin-top: 0;
@@ -105,19 +108,19 @@
         @media (max-width: 600px) {
           line-height: 30px;
         }
-        @media (max-width: 450px) {
-          font-size: 20px;
-          line-height: 26px;
-          width: max-content;
-        }
-        @media (max-width: 420px) {
-          font-size: 24px;
-          width: 100%;
-          margin-bottom: 10px;
-        }
-        // @media (max-width: 380px) {
-        //   font-size: 16px;
+        // @media (max-width: 450px) {
+        //   font-size: 20px;
+        //   line-height: 26px;
+        //   width: max-content;
         // }
+        @media (max-width: 550px) {
+          margin-left: 18px;
+          width: fit-content;
+          margin-bottom: 26px;
+          font-size: 26px;
+          line-height: 30px;
+          margin-top: 16px;
+        }
       }
       p {
         margin-top: 0;
@@ -131,32 +134,29 @@
         @media (max-width: 600px) {
           line-height: 16px;
         }
-        @media (max-width: 450px) {
+        // @media (max-width: 450px) {
+        //   width: fit-content;
+        //   font-size: 12px;
+        //   margin-bottom: 12px;
+        //   line-height: 16px;
+        // }
+        @media (max-width: 550px) {
+          margin-left: 18px;
           width: fit-content;
-          font-size: 12px;
-          margin-bottom: 12px;
-          line-height: 16px;
+          font-size: 16px;
+          line-height: 26px;
         }
-        @media (max-width: 420px) {
-          line-height: 12px;
-          margin-bottom: 22px;
-          font-size: 14px;
-          // margin-top: 30px;
-          margin-top: auto;
-        }
-        // @media (max-width: 380px) {
-        //   font-size: 10px;
-        // }
-        // @media (max-width: 320px) {
-        //   margin-bottom: 0;
-        // }
       }
     }
     .services__button {
       @media (max-width: 630px) {
         width: 100%;
       }
-      @media (max-width: 420px) {
+      @media (max-width: 550px) {
+        // display: flex;
+        // flex-direction: row;
+        // // justify-content: center;
+        // justify-content: start;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -173,23 +173,18 @@
         @media (max-width: 630px) {
           width: 100%;
         }
-        @media (max-width: 450px) {
-          height: 63%;
-          width: 70%;
-          font-size: 12px;
-        }
-        @media (max-width: 420px) {
-          // height: 50%;
-          // font-size: 10px;
-          // margin: 0;
-          // width: 80%;
-          // align-self: center;
-          height: 30px;
-          margin-bottom: 0;
-        }
-        // @media (max-width: 300px) {
-        //   font-size: 8px;
+        // @media (max-width: 450px) {
+        //   height: 63%;
+        //   width: 70%;
+        //   font-size: 12px;
         // }
+        @media (max-width: 550px) {
+          height: 30px;
+          margin-top: 26px;
+          margin-bottom: 16px;
+          width: 90%;
+          font-size: 14px;
+        }
       }
       .new-button-img {
         display: none;
@@ -222,7 +217,7 @@
       width: 50%;
       z-index: 1;
     }
-    @media (max-width: 420px) {
+    @media (max-width: 550px) {
       display: none;
     }
 
@@ -233,7 +228,7 @@
         width: 100%;
         height: auto;
       }
-      @media (max-width: 450px) {
+      @media (max-width: 550px) {
         height: auto;
       }
     }
