--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -303,6 +303,8 @@
     // @media (max-width: 1439px) {
     //   margin-left: 0;
     // }
+    //width: 40vw;
+    width: 150px;
     @media (max-width: 1280px) {
       margin-left: auto;
       margin-right: auto;
