--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -1,44 +1,89 @@
 .how-we-work {
   // display: flex;
-
-  // flex-direction: row;
-  // justify-content: center;
-  // align-items: center;
-  // display: inline-block;
-  // overflow-y: hidden;
-  // overflow-x: scroll;
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
+  // flex-wrap: nowrap;
+  // overflow-x: auto;
   width: 1440px;
   height: 900px;
-  background-color: $secondary;
-  border: none;
-  // transform: rotate(-90deg);
-  // scroll-snap-type: mandatory;
-  // scroll-snap-points-y: repeat(300px);
-  // scroll-snap-type: y mandatory;
+  // background-color: $secondary;
+  // border: none;
+  // transition: transform 0.3s;
 
-  // &::-webkit-scrollbar {
-  //   width: 0;
+  // @media (max-width: 1439px) {
+  //   width: 100vw;
+  //   margin: 0 auto;
+  //   justify-content: center;
   // }
-  //display: none;
-  @media (max-width: 1439px) {
-    width: 100vw;
-    margin: 0 auto;
+  // @media (max-width: 450px) {
+  //   margin-top: 60px;
+  // }
+  main {
+    overflow-x: hidden;
+    display: flex;
+    position: sticky;
+    top: 0;
+  }
+
+  h1 {
+    margin: 0;
+    padding: 0;
+  }
+
+  section {
+    //min-width: 50vw;
+    width: 50vw;
+    //min-height: 100vh;
+    height: 900px;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    font-size: 4ch;
   }
-  @media (max-width: 450px) {
-    margin-top: 60px;
+
+  section:nth-child(even) {
+    background-color: teal;
+    color: white;
   }
+
+  .read-article {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 999;
+    color: #000;
+    background: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-family: arial;
+    text-decoration: none;
+    box-shadow: rgb(50 50 93 / 25%) 0 0 100px -20px,
+      rgb(0 0 0 / 30%) 0 0 60px -15px;
+  }
+  .read-article:hover {
+    background: #d5d5d5;
+    box-shadow: rgb(50 50 93 / 25%) 0 0 100px -20px,
+      rgb(0 0 0 / 30%) 0 0 60px 0px;
+  }
+  iframe[sandbox] .read-article {
+    display: none;
+  }
+
+  //
+  //
+  //
+  //
+  //
 
   .how-we-work__wrapper {
+    overflow-x: hidden;
     display: flex;
-    flex-direction: row;
-    flex: 0 0 auto;
-    width: fit-content;
-    // scroll-snap-align: start;
-    // transform: rotate(90deg);
+    position: sticky;
+    top: 0;
+
+    // display: flex;
+    // flex-direction: row;
+    // flex: 0 0 auto;
+    // width: fit-content;
+
     margin-top: 64px;
     margin-left: 80px;
     //  border: #f2f2f2 1px solid;
