--- a/src/style/style.css
+++ b/src/style/style.css
@@ -715,202 +715,25 @@ content .about-us__partners img {
 }
 
 .how-we-work {
-  width: 1440px;
-  height: 900px;
+  width: auto;
+  height: auto;
 }
-.how-we-work main {
+.how-we-work .sticky-container .wrapper-sticky {
+  width: 90vw;
+  margin: 0 auto;
   overflow-x: hidden;
   display: flex;
   position: sticky;
   top: 0;
 }
-.how-we-work h1 {
-  margin: 0;
-  padding: 0;
-}
-.how-we-work section {
-  width: 50vw;
-  height: 900px;
+.how-we-work .sticky-container section {
+  min-width: 50vw;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 4ch;
-}
-.how-we-work section:nth-child(even) {
-  background-color: teal;
-  color: white;
-}
-.how-we-work .read-article {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  z-index: 999;
-  color: #000;
-  background: white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  font-family: arial;
-  text-decoration: none;
-  box-shadow: rgba(50, 50, 93, 0.25) 0 0 100px -20px, rgba(0, 0, 0, 0.3) 0 0 60px -15px;
-}
-.how-we-work .read-article:hover {
-  background: #d5d5d5;
-  box-shadow: rgba(50, 50, 93, 0.25) 0 0 100px -20px, rgba(0, 0, 0, 0.3) 0 0 60px 0px;
-}
-.how-we-work iframe[sandbox] .read-article {
-  display: none;
-}
-.how-we-work .how-we-work__wrapper {
-  overflow-x: hidden;
-  display: flex;
-  position: sticky;
-  top: 0;
-  margin-top: 64px;
-  margin-left: 80px;
-}
-@media (max-width: 1439px) {
-  .how-we-work .how-we-work__wrapper {
-    margin: 32px auto;
-  }
-}
-@media (max-width: 1280px) {
-  .how-we-work .how-we-work__wrapper {
-    width: 90vw;
-  }
-}
-.how-we-work .how-we-work__wrapper .how-we-work__block {
-  width: 600px;
-  margin-right: 100px;
-}
-@media (max-width: 1439px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__block {
-    margin-right: 0;
-    margin-left: 0;
-  }
-}
-@media (max-width: 1280px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__block {
-    width: 50vw;
-  }
-}
-@media (max-width: 420px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__block .how-we-work__title {
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-.how-we-work .how-we-work__wrapper .how-we-work__block .how-we-work__title h1 {
-  color: #ffffff;
-  font-weight: 700;
-  font-size: 64px;
-  color: #14213d;
-  text-shadow: 0 -1px 1px #f2f2f2, 0 -1px 1px #f2f2f2, 0 1px 1px #f2f2f2, 0 1px 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2;
-}
-@media (max-width: 420px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__block .how-we-work__title h1 {
-    margin: 0 auto;
-    width: 90%;
-    font-size: 60px;
-  }
-}
-@media (max-width: 320px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__block .how-we-work__title h1 {
-    font-size: 50px;
-  }
-}
-.how-we-work .how-we-work__wrapper .how-we-work__block .how-we-work__title p {
-  width: 520px;
-  color: #ffffff;
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 400;
-}
-@media (max-width: 1280px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__block .how-we-work__title p {
-    width: 80%;
-  }
-}
-@media (max-width: 420px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__block .how-we-work__title p {
-    margin: 60px auto;
-    width: 90%;
-    line-height: 50px;
-  }
-}
-@media (max-width: 320px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__block .how-we-work__title p {
-    font-size: 18px;
-  }
-}
-.how-we-work .how-we-work__wrapper .how-we-work__right-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-right: 100px;
-}
-@media (max-width: 1280px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__right-content {
-    width: 50vw;
-  }
-}
-.how-we-work .how-we-work__wrapper .how-we-work__right-content .how-we-work__text {
-  width: 552px;
-  margin: 24px;
-}
-@media (max-width: 1280px) {
-  .how-we-work .how-we-work__wrapper .how-we-work__right-content .how-we-work__text {
-    width: 90%;
-  }
-}
-.how-we-work .how-we-work__wrapper .how-we-work__right-content .how-we-work__text span {
-  color: #fca311;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 30px;
-}
-.how-we-work .how-we-work__wrapper .how-we-work__right-content .how-we-work__text h1 {
-  font-size: 40px;
-  color: #ffffff;
-}
-.how-we-work .how-we-work__wrapper .how-we-work__right-content .how-we-work__text p {
-  font-size: 20px;
-  font-weight: 400;
-  color: #ffffff;
-  line-height: 30px;
-}
-.how-we-work .how-we-work__wrapper .how-we-work__right-content img {
-  width: 405px;
-  height: 402px;
-  margin-bottom: 71px;
-}
-@media (max-width: 1280px) {
-  .how-we-work .how-we-work__wrapper .description {
-    width: 50vw;
-  }
-}
-@media (max-width: 1280px) and (max-width: 850px) {
-  .how-we-work .how-we-work__wrapper .description {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100vw;
-  }
-}
-@media (max-width: 1280px) {
-  .how-we-work .how-we-work__wrapper .step-1 {
-    margin-right: 0;
-  }
-}
-@media (max-width: 850px) {
-  .how-we-work .how-we-work__wrapper .step-1 {
-    display: none;
-  }
-}
-.how-we-work .how-we-work__wrapper .step-4 {
-  margin-right: 50px;
+  background-color: blue;
 }
 
 .services {
@@ -2101,7 +1924,8 @@ html {
 
 #app {
   max-width: 1440px;
-  height: 100vh;
+  height: -moz-fit-content;
+  height: fit-content;
   background-color: #ffffff;
   margin: 0 auto;
   display: flex;
