--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,6 +5,7 @@
   top: 0;
   left: 0;
   z-index: 50;
+  display: none;
 }
 .header .container {
   max-width: 1050px;
@@ -714,26 +715,28 @@ content .about-us__partners img {
   }
 }
 
-.how-we-work {
-  width: auto;
-  height: auto;
+.sticky-container {
+  width: -moz-fit-content;
+  width: fit-content;
+  width: 100vw;
 }
-.how-we-work .sticky-container .wrapper-sticky {
-  width: 90vw;
-  margin: 0 auto;
+.sticky-container main {
   overflow-x: hidden;
   display: flex;
   position: sticky;
   top: 0;
 }
-.how-we-work .sticky-container section {
+.sticky-container h1 {
+  margin: 0;
+  padding: 0;
+}
+.sticky-container section {
   min-width: 50vw;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 4ch;
-  background-color: blue;
 }
 
 .services {
